add asset folder and update index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <h1>Welcome to my home page!</h1>
   <img width="200" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3b/SpongeBob_SquarePants_character.svg/330px-SpongeBob_SquarePants_character.svg.png">
 <body>
+    <h1>Welcome to Felix's Project 1</h1>
 
+    <p>This is an analysis of Starbucks stores in the USA</p>
+    <img width="200" src="assets/population_per_state.png"
 </body>
 
 </html>
